# RustDX

./: Cargo.toml  build.rs
assets/shaders/: TestVS.hlsl
assets/shaders/common/: VertexFactory.hlsl
assets/shaders/test/: TestPS.hlsl
examples/: triangle.rs
generation/: d3d12_wrapper.h
src/: lib.rs
src/d3d12_wrapper/: d3d12_buffer.rs  d3d12_command.rs  d3d12_common.rs  d3d12_debug.rs  d3d12_device.rs  d3d12_enum.rs  d3d12_pso.rs  d3d12_resource.rs  d3d12_sync.rs  d3d12_texture.rs  d3d12_window.rs  mod.rs
src/material_system/: mod.rs  shader.rs  vertex_factory.rs
src/raw_bindings/: d3d12.rs  mod.rs
src/rendering_pipeline/: mesh_draw_command.rs  mod.rs  render_pass.rs
src/rendering_pipeline/rendering_passes/: mod.rs  test_triangle_rendering_pass.rs
src/scene/: mesh.rs  mod.rs  scene.rs  scene_proxy.rs  static_mesh.rs
